--- a/Ai-Product-Solution.html
+++ b/Ai-Product-Solution.html
@@ -179,7 +179,7 @@
               </ul>
               <div class="d-flex top-header-icon mt-5 pb-3 mt-5">
                   <a href="https://www.facebook.com/profile.php?id=61575126470129" class="text-white mx-2"><i class="fab fa-facebook"></i></a>
-                  <a href="https://www.linkedin.comm/company/106962170" class="text-white mx-2"><i class="fab fa-linkedin"></i></a>
+                  <a href="https://www.linkedin.com/company/106962170" class="text-white mx-2"><i class="fab fa-linkedin"></i></a>
                   <a href="https://www.instagram.com/" class="text-white mx-2"><i class="fab fa-instagram"></i></a>
                   <a href="https://www.pinterest.com/aisystemsoft/" class="text-white mx-2"><i class="fa-brands fa-pinterest"></i></a>
               </div>
@@ -323,7 +323,7 @@
             <div class="social-icons  d-flex justify-content-around gap-3 position-absolute bottom-0 col-12 w100 ">
                 <div class="col-8 mx-auto  d-flex flex-row justify-content-between">
                     <a href="https://www.facebook.com/profile.php?id=61575126470129" class="text-white mx-2"><i class="fab fa-facebook"></i></a>
-                    <a href="https://www.linkedin.comm/company/106962170" class="text-white mx-2"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/company/106962170" class="text-white mx-2"><i class="fab fa-linkedin"></i></a>
                     <a href="https://www.instagram.com/" class="text-white mx-2"><i class="fab fa-instagram"></i></a>
                     <a href="https://www.pinterest.com/aisystemsoft/" class="text-white mx-2"><i class="fa-brands fa-pinterest"></i></a>
      
