--- a/members.html
+++ b/members.html
@@ -182,7 +182,7 @@
           <div class="d-flex top-header-icon mt-5 pb-3 mt-5">
             <a href="https://www.facebook.com/profile.php?id=61575126470129" class="text-white mx-2"><i
                 class="fab fa-facebook"></i></a>
-            <a href="https://www.linkedin.comm/company/106962170" class="text-white mx-2"><i
+            <a href="https://www.linkedin.com/company/106962170" class="text-white mx-2"><i
                 class="fab fa-linkedin"></i></a>
             <a href="https://www.instagram.com/" class="text-white mx-2"><i class="fab fa-instagram"></i></a>
             <a href="https://www.pinterest.com/aisystemsoft/" class="text-white mx-2"><i
@@ -329,7 +329,7 @@
           <div class="col-8 mx-auto  d-flex flex-row justify-content-between">
             <a href="https://www.facebook.com/profile.php?id=61575126470129" class="text-white mx-2"><i
                 class="fab fa-facebook"></i></a>
-            <a href="https://www.linkedin.comm/company/106962170" class="text-white mx-2"><i
+            <a href="https://www.linkedin.com/company/106962170" class="text-white mx-2"><i
                 class="fab fa-linkedin"></i></a>
             <a href="https://www.instagram.com/" class="text-white mx-2"><i class="fab fa-instagram"></i></a>
             <a href="https://www.pinterest.com/aisystemsoft/" class="text-white mx-2"><i
