--- a/gap_analysis_and_assement.html
+++ b/gap_analysis_and_assement.html
@@ -6,18 +6,18 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- ======================== FONT AWEOSEOM ======================== -->
-   <link rel="shortcut icon" href="Assets/images/Logo/Ai-SS-Logo.png" type="image/x-icon">
+   <link rel="shortcut icon" href="Assets/images/Logo/AISS-logo.png" type="image/x-icon">
 
   <!-- ======================== FONT AWEOSEOM ======================== -->
 
   <!-- ======================== EXTERNEL CSS FILE ======================== -->
-  <link rel="stylesheet" href="CSS/style.css"> <!-- ======================== EXTERNEL CSS FILE ======================== --><meta name="twitter:image" content="https://fasihnasiraisystemsoft.netlify.app/Assets/images/Logo/Ai-SS-Logo.png"> 
+  <link rel="stylesheet" href="CSS/style.css"> <!-- ======================== EXTERNEL CSS FILE ======================== --><meta name="twitter:image" content="https://fasihnasiraisystemsoft.netlify.app/Assets/images/Logo/AISS-logo.png"> 
   <!-- ======================== EXTERNEL CSS FILE ======================== -->
 <!-- Twitter Card type -->
 <meta name="twitter:card" content="summary_large_image">
 
 <!-- Twitter image -->
-<meta name="twitter:image" content="https://fasihnasiraisystemsoft.netlify.app/Assets/images/Logo/Ai-SS-Logo.png">
+<meta name="twitter:image" content="https://fasihnasiraisystemsoft.netlify.app/Assets/images/Logo/AISS-logo.png">
 
   <!-- ======================== Bootstrap CSS ======================== -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -49,7 +49,7 @@
         <div class="container-fluid d-flex flex-row justify-content-between">
             <!-- ======================== Logo ======================== -->
             <a class="col-lg-2 col-5" href="#">
-                <img src="Assets/images/Logo/Ai-SS-Logo.png" alt="Logo" class="col-6 img-fluid " id="logo" />
+                <img src="Assets/images/Logo/AISS-logo.png" alt="Logo" class="col-lg-4 col-4 img-fluid " id="logo" />
    
    
             </a>
@@ -157,7 +157,7 @@
           <div class="offcanvas-header container">
               <h5 class="offcanvas-title">
                   <a class="navbar-brand " href="#">
-                      <img src="Assets/images/Logo/Ai-SS-Logo.png" alt="Logo" class="col-lg-2 col-4" />
+                      <img src="Assets/images/Logo/AISS-logo.png" alt="Logo" class="col-lg-2 col-4" />
                   </a>
               </h5>
               <button type="button" class="text-white bg-transparent border-0" data-bs-dismiss="offcanvas">
@@ -204,7 +204,7 @@
           <div class="offcanvas-header container">
               <h5 class="offcanvas-title">
                   <a class="navbar-brand " href="#">
-                      <img src="Assets/images/Logo/Ai-SS-Logo.png" alt="Logo" class="col-lg-2 col-4" />
+                      <img src="Assets/images/Logo/AISS-logo.png" alt="Logo" class="col-lg-2 col-4" />
                   </a>
               </h5>
               <button type="button" class="text-white bg-transparent border-0" data-bs-dismiss="offcanvas">
@@ -282,7 +282,7 @@
         <div class="offcanvas-header">
             <!-- ======================== Brand Logo and Close Button ======================== -->
             <div class="d-flex justify-content-between w-100 align-items-center">
-                <img src="Assets/images/Logo/Ai-SS-Logo.png" alt="Runok Logo" class="logo" style="width: 50px;">
+                <img src="Assets/images/Logo/AISS-logo.png" alt="Runok Logo" class="logo" style="width: 50px;">
                 <button type="button" class="bg-transparent border-0 rounded-circle" data-bs-dismiss="offcanvas"
                         aria-label="Close">
                     <i class="fa fa-window-close bg text-white1 fs-5 p-2 rounded-circle" aria-hidden="true"></i>
@@ -876,7 +876,7 @@
     <div class="container-fluid footer-content px-4 py-3">
       <div class="row">
         <div class="col-lg-3  col-12 mb-4">
-          <img src="Assets/images/Logo/Ai-SS-Logo.png" alt="Cybron Logo" class="mb-3 col-lg-4 col-3 m-0 p-0">
+          <img src="Assets/images/Logo/AISS-logo.png" alt="Cybron Logo" class="mb-3 col-lg-4 col-3 m-0 p-0">
 
           <p class="locte text-white1 fs-6 ">AI-GRC-Software Development Solution . We Develop Secure & Intelligent
             Solutions</p>
