--- a/contact.html
+++ b/contact.html
@@ -337,8 +337,8 @@
     </div>
     <!-- ======================== INFO CANVAS END ======================== -->
     <!-- ======================== SCROLL TO TOP BTN START  ========================-->
-    <a href="#" class="topbtnfix text-decoration-none">
-      <span id="topbtn"><i class="fa-solid fa-arrow-up p-2"></i></span>
+    <a href="#" class=" text-decoration-none">
+      
  
  
   </a>
