--- a/about.html
+++ b/about.html
@@ -478,87 +478,79 @@
     </div>
     <!-- =========== HEADING OF TEAM MEMBER CONTAINER END ==================== -->
 
-    <div class="container d-flex flex-column mb-5 flex-row justify-content-center align-items-center">
-      <!-- ============= HEADING CONTENT OF TEAM MEMBER START ================ -->
-      <div class="row ">
-        <!-- =========== CARD 1 START ============ -->
-        <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 team-wrapper mb-2 ">
-          <div class="cardteam  bg-white  py-3  p-lg-2">
-            <div class="image col-lg-12 col-11 mx-auto ">
-              <img src="Assets/images/Members/team-3.png"
-                alt="Team Member" class="col-lg-12 col-12 mx-auto img-fluid ">
-            </div>
+  <div class="container d-flex flex-column mb-5 flex-row justify-content-center align-items-center">
+        <!-- ============= HEADING CONTENT OF TEAM MEMBER START ================ -->
+        <div class="row ">
+            <!-- =========== CARD 1 START ============ -->
+            <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 team-wrapper mb-2 ">
+                <div class="cardteam  bg-white  py-4  p-lg-2">
+                    <div class="image col-lg-10 col-11 mx-auto ">
+                        <img src="Assets/images/Members/Shaheer_Waqar.jpg" alt="Team Member" class="col-lg-12 col-12 mx-auto img-fluid ">
+                    </div>
 
 
-            <div class="cardInfo pt-4 ps-1 col-lg-12 col-11 mx-auto ">
-              <h3>Fasih Nasir</h3>
-              <p class="  fs-5  col-org d-inline-block designation">
-                Sales Manager
-              </p>
+                    <div class="cardInfo pt-4 ps-1 col-lg-12 col-11 mx-auto text-center">
+                        <h4>Dr. M. Shaheer Waqar</h4>
+                        <p class=" fs-6 col-org d-inline-block designation">
+                            CEO / Founder Member
+                        </p>
+                    </div>
+                </div>
             </div>
-          </div>
+            <!-- =========== CARD 1 END ============ -->
+            <!-- =========== CARD 1 START ============ -->
+            <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 team-wrapper mb-2 ">
+                <div class="cardteam  bg-white  py-3  p-lg-2">
+                    <div class="image col-lg-10 col-11 mx-auto ">
+                        <img src="Assets/images/Members/Kamran_Bahalim.jpg" alt="Team Member" class="col-lg-12 col-12 mx-auto img-fluid ">
+                    </div>
+
+
+                    <div class="cardInfo pt-4 ps-1 col-lg-12 col-11 mx-auto text-center">
+                        <h4>Kamran Bahalim</h4>
+                        <p class="  fs-6 col-org d-inline-block designation">
+                            COO/ Director / Co-Founder Member
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <!-- =========== CARD 1 END ============ -->
+            <!-- =========== CARD 1 START ============ -->
+            <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 team-wrapper mb-2 ">
+                <div class="cardteam  bg-white  py-3  p-lg-2">
+                    <div class="image col-lg-10 col-11 mx-auto ">
+                        <img src="Assets/images/Members/Qasim_Masood.jpg" alt="Team Member" class="col-lg-12 col-12 mx-auto img-fluid ">
+                    </div>
+
+
+                    <div class="cardInfo pt-4 ps-1 col-lg-12 col-11 mx-auto text-center">
+                        <h4>Qasim Masood </h4>
+                        <p class="  fs-6 col-org d-inline-block designation">
+                            Marine Consultant &amp; Advisor 
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <!-- =========== CARD 1 END ============ -->
+
         </div>
-        <!-- =========== CARD 1 END ============ -->
-        <!-- =========== CARD 1 START ============ -->
-          <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 team-wrapper mb-2 ">
-          <div class="cardteam  bg-white  py-3  p-lg-2">
-            <div class="image col-lg-12 col-11 mx-auto ">
-              <img src="Assets/images/Members/team-4.png"
-                alt="Team Member" class="col-lg-12 col-12 mx-auto img-fluid ">
-            </div>
 
-
-            <div class="cardInfo pt-4 ps-1 col-lg-12 col-11 mx-auto ">
-              <h3>Fasih Nasir</h3>
-              <p class="  fs-5  col-org d-inline-block designation">
-                Sales Manager
-              </p>
-            </div>
-          </div>
-        </div>
-        <!-- =========== CARD 1 END ============ -->
-        <!-- =========== CARD 1 START ============ -->
-              <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 team-wrapper mb-2 ">
-          <div class="cardteam  bg-white  py-3  p-lg-2">
-            <div class="image col-lg-12 col-11 mx-auto ">
-              <img src="Assets/images/Members/team-6.png"
-                alt="Team Member" class="col-lg-12 col-12 mx-auto img-fluid ">
-            </div>
-
-
-            <div class="cardInfo pt-4 ps-1 col-lg-12 col-11 mx-auto ">
-              <h3>Fasih Nasir</h3>
-              <p class="  fs-5  col-org d-inline-block designation">
-                Sales Manager
-              </p>
-            </div>
-          </div>
-        </div>
-        <!-- =========== CARD 1 END ============ -->
-
-      </div>
-
-      <!-- ============= HEADING CONTENT OF TEAM MEMBER END ================ -->
-
-      <!-- ============ MEMBERS CARD PCITURE START ==================== -->
-      <div class="container d-flex justify-content-center">
+        <!-- ============= HEADING CONTENT OF TEAM MEMBER END ================ -->
         
-          <div class=" col-lg-2 col-12 d-flex   justify-content-center align-items-center flex-column">
-              <button type="submit" 
-              class="mt-3 mx-auto who text-white1 fw-light btn3 fs-6 px-3 text-dark text-capitalize bg-white p-2 d-flex flex-row align-items-center justify-content-center">
-              View All Members
-           <a href="members.html">
-            <i class="fa-solid fa-paper-plane icon-hover"></i>
+    <!-- ============ MEMBERS CARD PCITURE START ==================== -->
+        <div class="container d-flex justify-content-center">
 
-           </a>
-            </button>
+            <div class=" col-lg-2 col-12 d-flex   justify-content-center align-items-center flex-column">
+                <button type="submit" class="mt-3 mx-auto who text-white1 fw-light btn3 fs-6 px-3 text-dark text-capitalize bg-white p-2 d-flex flex-row align-items-center justify-content-center">
+                    View All Members
+                    <a href="/home/team_members">
+                        <i class="fa-solid fa-paper-plane icon-hover"></i>
 
-
-
-
+                    </a>
+                </button>
             </div>
-         </div>
-      <!-- ============ MEMBERS CARD PCITURE END ==================== -->
+        </div>
+        <!-- ============ MEMBERS CARD PCITURE END ==================== -->
 
 
     </div>
