--- a/Governance_Framework_implementations.html
+++ b/Governance_Framework_implementations.html
@@ -370,7 +370,7 @@
 
   <!-- ======================= MAIN 2 START ======================= -->
 <section>
-  <div class="container-fluid  over py-5 px-2 d-flex flex-lg-row flex-column">
+  <div class="container-fluid  over py-5 px-2 d-flex flex-lg-row flex-column-reverse">
     <!-- ====================== SIDER BAR START  ====================== -->
     <div class="col-lg-3 who p-2 sticky-element border-radious">
       <h3 class="text-white1 px-2 py-3">GRC Services</h3>
