--- a/header.html
+++ b/header.html
@@ -29,7 +29,7 @@
                 Service
               </a>
               <span class="navhover"></span>
-              <ul class="dropdown-menu mx-auto d-flex show flex-column justify-content-around container-fluid">
+              <ul class="dropdown-menu mx-auto d-flex  flex-column justify-content-around container-fluid">
                 <div class="col-12 d-flex flex-row  justify-content-between">
                   <!-- ====================================================================== -->
                   <li class="dropdown-submenu col-3">
@@ -146,7 +146,7 @@
 
     <!-- ======================== MOBILE NAVBAR START ======================== -->
     <nav class="navbar d-lg-none">
-      <div class="offcanvas offcanvas-end offcanvas-top1 who show " tabindex="-1" id="offcanvasMain"
+      <div class="offcanvas offcanvas-end offcanvas-top1 who  " tabindex="-1" id="offcanvasMain"
         aria-labelledby="offcanvasMainLabel">
         <div class="offcanvas-header container">
           <h5 class="offcanvas-title">
