--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 Service
               </a>
               <span class="navhover"></span>
-              <ul class="dropdown-menu mx-auto d-flex show flex-column justify-content-around container-fluid">
+              <ul class="dropdown-menu mx-auto d-flex  flex-column justify-content-around container-fluid">
                 <div class="col-12 d-flex flex-row  justify-content-between">
                   <!-- ====================================================================== -->
                   <li class="dropdown-submenu col-3">
