--- a/index.html
+++ b/index.html
@@ -401,7 +401,8 @@
 
   <!-- ======================== HEADER END ======================== -->
 
-
+<div class="container-fluid body-content p-0">
+  
   <!-- ======================== MAIN 1 START ======================== -->
   <section>
     <div class="container-fluid  mb-5 home_new d-flex flex-column align-items-center justify-content-center">
@@ -959,6 +960,7 @@
     </div>
   </section>
   <!-- ======================== OUR PRODUCT END======================== -->
+</div>
 
   <!-- ======================== FOOTER START ======================== -->
   <!-- ! NOTE THIS CONTENT IS REMAIN SAME IN EVERY PAGE -->
