--- a/members.html
+++ b/members.html
@@ -198,11 +198,11 @@
           <a class="dropdown-ite fs-5 fw-bold  d-flex justify-content-between align-items-center btn"
             href="grc_services.html">GRC Services</a>
           <ul class="dropdown-menu1 list-unstyled child-dropdown">
+                        <li><a class="dropdown-item" href="maturity_assesment.html">Maturity Assesment</a></li>
+            <li><a class="dropdown-item" href="gap_analysis_and_assement.html">Gap Analysis &amp; Assement</a></li>
             <li><a class="dropdown-item" href="Governance_Framework_implementations.html">Governance Framework implementations</a></li>
             <li><a class="dropdown-item" href="ISO_Standards_Implementations.html">ISO Frameworks Implementations</a></li>
             <li><a class="dropdown-item" href="Risk_Management_Services.html">Risk Management Services</a></li>
-            <li><a class="dropdown-item" href="maturity_assesment.html">Maturity Assesment</a></li>
-            <li><a class="dropdown-item" href="gap_analysis_and_assement.html">Gap Analysis &amp; Assement </a></li>
           </ul>
         </li>
         <!-- ====================================================================== -->
@@ -217,11 +217,15 @@
           </ul>
         </li>
         <!-- ====================================================================== -->
-        <li class="dropdown-submenu col-12">
-          <a class="dropdown-ite fs-5 fw-bold btn text-start" href="project_management_services.html">
-            Project Management Service
-          </a>
-        </li>
+        <li class="dropdown-submenu col-2">
+                  <a class="dropdown-ite fs-5 fw-bold btn text-start "
+                    href="#">Project  Management </a>
+                  <ul class="dropdown-menu1 list-unstyled child-dropdown">
+                    
+            <li><a class="dropdown-item" href="project_management_services.html">Project Management <br> Service</a></li>
+
+                  </ul>
+                </li>
         <!-- ====================================================================== -->
       </div>
     </ul>
