--- a/buoyspy.html
+++ b/buoyspy.html
@@ -789,63 +789,41 @@
   <!-- ======================== FORM END ======================== -->
   <!-- ======================== OUR PRODUCT START======================== -->
   <section>
-    <div class="container-fluid roun my-5 p-3  bg d-flex flex-row justify-content-center pos align-items-center">
+  <div class="container-fluid roun my-5 p-3 bg d-flex flex-row justify-content-center pos align-items-center">
+    <div class="d-flex flex-row justify-content-center flex-column">
+      <h4 class="text-white float-start">Our Products</h4>
 
-      <div class="d-flex flex-row justify-content-center flex-column">
-        <h4 class="text-white float-start">Our Products</h4>
-
-        <swiper-container class="mySwiper container bg-white col-12" slides-per-view="3" autoplay-delay="1500"
-          space-between="30">
-          <swiper-slide><img src="Assets/images/Products-images/automan.png" class="img-fluid mx-lg-4 "
-              alt="automan"></swiper-slide>
-          <swiper-slide><img src="Assets/images/Products-images/buoylight.png" class="img-fluid mx-lg-4"
-              alt="buoylight"></swiper-slide>
-          <swiper-slide> <img src="Assets/images/Products-images/buoyspot.png" class="img-fluid mx-lg-4"
-              alt="buoyspot"></swiper-slide>
-          <swiper-slide><img src="Assets/images/Products-images/callmatics.png" class="img-fluid mx-lg-4"
-              alt="callmatics"></swiper-slide>
-          <swiper-slide><img src="Assets/images/Products-images/carmatics.png" class="img-fluid mx-lg-4"
-              alt="carmatics"></swiper-slide>
-          <swiper-slide><img src="Assets/images/Products-images/facematics.png" class="img-fluid mx-lg-4"
-              alt="facematics"></swiper-slide>
-          <swiper-slide><img src="Assets/images/Products-images/inteliOCR.png" class="img-fluid mx-lg-4"
-              alt="inteliOCR"></swiper-slide>
-          <swiper-slide> <img src="Assets/images/Products-images/iport.png" class="img-fluid mx-lg-4"
-              alt="iport"></swiper-slide>
-          <swiper-slide> <img src="Assets/images/Products-images/mallmatics-02.png" class="img-fluid mx-lg-4"
-              alt="mallmatics"></swiper-slide>
-
-          <swiper-slide><img src="Assets/images/Products-images/planetscan.png" class="img-fluid mx-lg-4"
-              alt="mallmatics"></swiper-slide>
-
-          <swiper-slide><img src="Assets/images/Products-images/mallmatics.png" class="img-fluid mx-lg-4"
-              alt="mallmatics"></swiper-slide>
-          <swiper-slide><img src="Assets/images/Products-images/medbot.png" class="img-fluid mx-lg-4"
-              alt="medbot"></swiper-slide>
-          <swiper-slide><img src="Assets/images/Products-images/meddroid.png" class="img-fluid mx-lg-4"
-              alt="meddroid"></swiper-slide>
-          <swiper-slide><img src="Assets/images/Products-images/mediatalks.png" class="img-fluid mx-lg-4"
-              alt="mediatalks"></swiper-slide>
-          <swiper-slide><img src="Assets/images/Products-images/posmatics.png" class="img-fluid mx-lg-4"
-              alt="facematics"></swiper-slide>
-          <swiper-slide><img src="Assets/images/Products-images/predicto.png" class="img-fluid mx-lg-4"
-              alt="inteliOCR"></swiper-slide>
-          <swiper-slide> <img src="Assets/images/Products-images/retailatics.png" class="img-fluid mx-lg-4"
-              alt="iport"></swiper-slide>
-          <swiper-slide> <img src="Assets/images/Products-images/retailmatics.png" class="img-fluid mx-lg-4"
-              alt="mallmatics"></swiper-slide>
-
-        </swiper-container>
-
-
-
-        <div class="col-12">
-          <h4 class="float-end mt-3 text-white">Ultimate AI Powered Products</h4>
+      <div class="product_swiper swiper mySwiper container bg-white col-12">
+        <div class="swiper-wrapper">
+          <!-- Slides -->
+          <div class="swiper-slide"><img src="Assets/images/Products-images/automan.png" class="img-fluid mx-lg-4" alt="automan" /></div>
+          <div class="swiper-slide"><img src="Assets/images/Products-images/buoylight.png" class="img-fluid mx-lg-4" alt="buoylight" /></div>
+          <div class="swiper-slide"><img src="Assets/images/Products-images/buoyspot.png" class="img-fluid mx-lg-4" alt="buoyspot" /></div>
+          <div class="swiper-slide"><img src="Assets/images/Products-images/callmatics.png" class="img-fluid mx-lg-4" alt="callmatics" /></div>
+          <div class="swiper-slide"><img src="Assets/images/Products-images/carmatics.png" class="img-fluid mx-lg-4" alt="carmatics" /></div>
+          <div class="swiper-slide"><img src="Assets/images/Products-images/facematics.png" class="img-fluid mx-lg-4" alt="facematics" /></div>
+          <div class="swiper-slide"><img src="Assets/images/Products-images/inteliOCR.png" class="img-fluid mx-lg-4" alt="inteliOCR" /></div>
+          <div class="swiper-slide"><img src="Assets/images/Products-images/iport.png" class="img-fluid mx-lg-4" alt="iport" /></div>
+          <div class="swiper-slide"><img src="Assets/images/Products-images/mallmatics-02.png" class="img-fluid mx-lg-4" alt="mallmatics" /></div>
+          <div class="swiper-slide"><img src="Assets/images/Products-images/planetscan.png" class="img-fluid mx-lg-4" alt="planetscan" /></div>
+          <div class="swiper-slide"><img src="Assets/images/Products-images/mallmatics.png" class="img-fluid mx-lg-4" alt="mallmatics" /></div>
+          <div class="swiper-slide"><img src="Assets/images/Products-images/medbot.png" class="img-fluid mx-lg-4" alt="medbot" /></div>
+          <div class="swiper-slide"><img src="Assets/images/Products-images/meddroid.png" class="img-fluid mx-lg-4" alt="meddroid" /></div>
+          <div class="swiper-slide"><img src="Assets/images/Products-images/mediatalks.png" class="img-fluid mx-lg-4" alt="mediatalks" /></div>
+          <div class="swiper-slide"><img src="Assets/images/Products-images/posmatics.png" class="img-fluid mx-lg-4" alt="posmatics" /></div>
+          <div class="swiper-slide"><img src="Assets/images/Products-images/predicto.png" class="img-fluid mx-lg-4" alt="predicto" /></div>
+          <div class="swiper-slide"><img src="Assets/images/Products-images/retailatics.png" class="img-fluid mx-lg-4" alt="retailatics" /></div>
+          <div class="swiper-slide"><img src="Assets/images/Products-images/retailmatics.png" class="img-fluid mx-lg-4" alt="retailmatics" /></div>
         </div>
       </div>
 
+      <div class="col-12">
+        <h4 class="float-end mt-3 text-white">Ultimate AI Powered Products</h4>
+      </div>
     </div>
-  </section>
+  </div>
+</section>
+
   <!-- ======================== OUR PRODUCT END======================== -->
  <!-- ======================== FOOTER START ======================== -->
   <!-- ! NOTE THIS CONTENT IS REMAIN SAME IN EVERY PAGE -->
