--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
 
 
   <!-- ======================== FOOTPRINTS & PROJECT START ======================== -->
-<section class="my-4">
+<section class="my-4 ">
 
     <div class="container-fluid d-flex flex-lg-row align-items-lg-center flex-column mb-3 justify-content-between">
         <div class="d-flex flex-lg-row flex-column align-items-lg-center ">
@@ -410,13 +410,13 @@
         </div>
     </div>
 
-    <div class="container-fluid who py-5 p-3 d-flex flex-lg-ro flex-column p-0 m-0 justify-content-between foodprints_section">
+    <div class="container-fluid  para_bg  py-5 p-3 d-flex flex-lg-ro flex-column p-0 m-0 justify-content-between foodprints_section">
 
-             <div class="col-lg-7 mx-auto text-center pt-lg-0 pt-3  col-md-6 col-12 d-flex flex-column ">
-            <h2 class="display-6 fw-normal col-lg-12 text-white1">
+             <div class="col-lg-7 mx-auto text-center pt-lg-0 pt-3 text-dark col-md-6 col-12 d-flex flex-column ">
+            <h2 class="display-6 fw-normal col-lg-12 ">
                 <span class="num">30</span>+ Years Experience of Consulting, Learning &  Development
             </h2>
-            <p class="text-white fw-light py-4 col-lg-9 mx-auto text-center">
+            <p class=" fw-light py-4 col-lg-9 mx-auto text-center">
                 We are dedicated team to deliver innovative solutions to our clients,  that
                 optimize thier operations and drive towards success with productivity.
             </p>
@@ -429,7 +429,7 @@
   <div class="swiper mySwiper fn_swiper col-lg-11 col-12 ms-auto ">
     <div class="swiper-wrapper">
       <!-- ================== SLIDER HERE START =================== -->
-      <div class="swiper-slide d-flex flex-lg-row flex-column">
+      <div class="swiper-slide d-flex flex-lg-row flex-column ">
         <div class="col-lg-6 col-12 p-2">
           <p class="fs-6 ">AI System Soft LLC USA is the organization who have a team of researchers, developers, innovators, trainers and experienced consultants, who have the extensive experience in their domains and implemented numbers of projects in UK, Europe, Middle East and Far East successfully. The team having the expertise of Artificial Intelligence, Software Architect & Development, GRC – Governance Risk and Compliance implementations with VAPT Services.
 .</p>
@@ -727,6 +727,7 @@ Whether you're a startup looking to scale, an enterprise undergoing transformati
 
       
            </div>
+  
         <div class="container d-flex flex-lg-row  flex-column py-5 ">
     <div class="col-lg-6 col-12">
 
