--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- ======================== FONT AWEOSEOM ======================== -->
-  <link rel="shortcut icon" href="Assets/images/Logo/Ai-SS-Logo.png" type="image/x-icon">
+  <link rel="shortcut icon" href="Assets/images/Logo/AISS-logo.png" type="image/x-icon">
 
   <!-- ======================== FONT AWEOSEOM ======================== -->
   <title>AI-System-Soft | Intelligent & Cyber Secure Solutions</title>
@@ -52,9 +52,7 @@
         <!-- ======================== Logo ======================== -->
         <a class="col-lg-2 col-5" href="#">
           <img src="Assets/images/Logo/AISS-logo.png" alt="Logo" class="col-lg-4 col-4 img-fluid " id="logo" />
-
-
-        </a>
+ </a>
 
         <!-- ======================== Toggler Button ======================== -->
 
@@ -271,23 +269,23 @@
     <!-- ======================== MOBILE NAVBAR END ======================== -->
 
     <!-- ======================== INFO CANVAS START ======================== -->
-    <div class="offcanvas offcanvas-end who1 " tabindex="-1" id="offcanvasRight1" aria-labelledby="offcanvasRightLabel">
-      <div class="offcanvas-header">
+    <div class="offcanvas offcanvas-end para_bg " tabindex="-1" id="offcanvasRight1" aria-labelledby="offcanvasRightLabel">
+      <div class="offcanvas-header bg-white m-0 p-2">
         <!-- ======================== Brand Logo and Close Button ======================== -->
-        <div class="d-flex justify-content-between w-100 align-items-center">
+        <div class="d-flex justify-content-between w-100 align-items-center ">
           <img src="Assets/images/Logo/AISS-logo.png" alt="Runok Logo" class="logo" style="width: 50px;">
-          <button type="button" class="bg-transparent border-0 rounded-circle" data-bs-dismiss="offcanvas"
+          <button type="button" class="bg-transparent col-org border-0 rounded-circle" data-bs-dismiss="offcanvas"
             aria-label="Close">
-            <i class="fa fa-window-close bg text-white1 fs-5 p-2 rounded-circle" aria-hidden="true"></i>
+            <i class="fa fa-window-close fs-5 p-2 rounded-circle" aria-hidden="true"></i>
           </button>
         </div>
       </div>
       <div class="offcanvas-body ">
         <!-- ======================== About Section ======================== -->
         <div class="about-section text-start">
-          <h2 class="fw-bolder py-3 text-white1">
+          <h2 class="fw-bolder py-3 ">
           </h2>
-          <h5 class="text-white1 fw-light">
+          <h5 class=" fw-light">
             AI-GRC-Software Development Solution
             We Develop Secure & Intelligent Solutions
           </h5>
@@ -298,29 +296,29 @@
 
           <p class="pt-3">
 
-            <i class="fa-solid fa-location-dot me-2 bg p-2 text-white1 rounded-circle"></i>
+            <i class="fa-solid fa-location-dot me-2 bg-white p-2  rounded-circle"></i>
 
 
-            <span class="text-white1 pt-5 fs-6">Conroy Windermere, FL-34786, USA</span>
+            <span class=" pt-5 fs-6">Conroy Windermere, FL-34786, USA</span>
           </p>
           <p>
-            <i class="fa-solid fa-phone me-2  bg p-2 text-white1 rounded-circle"></i>
+            <i class="fa-solid fa-phone me-2  bg-white p-2  rounded-circle"></i>
 
 
-            <span class="text-white1"> + 1 (689) 276-4636</span>
+            <span class=""> + 1 (689) 276-4636</span>
           </p>
           <p>
-            <i class="fa-solid fa-envelope me-2  bg p-2 text-white1 rounded-circle"></i>
+            <i class="fa-solid fa-envelope me-2  bg-white p-2  rounded-circle"></i>
 
 
-            <span class="text-white1"> info@aisystemsoft.com</span>
+            <span class=""> info@aisystemsoft.com</span>
           </p>
         </div>
         <div class="col-12 mx-auto">
-          <img src="Assets/images/Pictures/exp-img-1.webp" class="img-fluid col-12" alt="">
+          <img src="Assets/images/Pictures/exp-img-1.jpg" class="img-fluid col-12" alt="">
         </div>
         <!-- ======================== Social Media Icons ======================== -->
-        <div class="social-icons  d-flex justify-content-around gap-3 position-absolute bottom-0 col-12 w100 ">
+        <div class="social-icons bg-white d-flex justify-content-around gap-3 position-absolute bottom-0 col-12 w100 ">
           <div class="col-8 mx-auto  d-flex flex-row justify-content-between">
             <a href="https://www.facebook.com/profile.php?id=61575126470129" class="text-white mx-2"><i
                 class="fab fa-facebook"></i></a>
@@ -899,41 +897,83 @@ Connect with us to lay out your miles stones Map</h5>
   <!-- ======================== CONTACT-US END ======================== -->
 
   <!-- ======================== OUR PRODUCT START======================== -->
-  <section>
-  <div class="container-fluid roun my-5 p-3 bg d-flex flex-row justify-content-center pos align-items-center">
-    <div class="d-flex flex-row justify-content-center flex-column">
-      <h4 class="text-white float-start">Our Products</h4>
+<section>
+    <div
+      class="container-fluid roun my-5 p-3 bg d-flex justify-content-center align-items-center"
+    >
+      <div class="w-100">
+        <h4 class="text-white mb-4">Our Products</h4>
 
-      <div class="product_swiper swiper mySwiper container bg-white col-12">
-        <div class="swiper-wrapper">
-          <!-- Slides -->
-          <div class="swiper-slide"><img src="Assets/images/Products-images/automan.png" class="img-fluid mx-lg-4" alt="automan" /></div>
-          <div class="swiper-slide"><img src="Assets/images/Products-images/buoylight.png" class="img-fluid mx-lg-4" alt="buoylight" /></div>
-          <div class="swiper-slide"><img src="Assets/images/Products-images/buoyspot.png" class="img-fluid mx-lg-4" alt="buoyspot" /></div>
-          <div class="swiper-slide"><img src="Assets/images/Products-images/callmatics.png" class="img-fluid mx-lg-4" alt="callmatics" /></div>
-          <div class="swiper-slide"><img src="Assets/images/Products-images/carmatics.png" class="img-fluid mx-lg-4" alt="carmatics" /></div>
-          <div class="swiper-slide"><img src="Assets/images/Products-images/facematics.png" class="img-fluid mx-lg-4" alt="facematics" /></div>
-          <div class="swiper-slide"><img src="Assets/images/Products-images/inteliOCR.png" class="img-fluid mx-lg-4" alt="inteliOCR" /></div>
-          <div class="swiper-slide"><img src="Assets/images/Products-images/iport.png" class="img-fluid mx-lg-4" alt="iport" /></div>
-          <div class="swiper-slide"><img src="Assets/images/Products-images/mallmatics-02.png" class="img-fluid mx-lg-4" alt="mallmatics" /></div>
-          <div class="swiper-slide"><img src="Assets/images/Products-images/planetscan.png" class="img-fluid mx-lg-4" alt="planetscan" /></div>
-          <div class="swiper-slide"><img src="Assets/images/Products-images/mallmatics.png" class="img-fluid mx-lg-4" alt="mallmatics" /></div>
-          <div class="swiper-slide"><img src="Assets/images/Products-images/medbot.png" class="img-fluid mx-lg-4" alt="medbot" /></div>
-          <div class="swiper-slide"><img src="Assets/images/Products-images/meddroid.png" class="img-fluid mx-lg-4" alt="meddroid" /></div>
-          <div class="swiper-slide"><img src="Assets/images/Products-images/mediatalks.png" class="img-fluid mx-lg-4" alt="mediatalks" /></div>
-          <div class="swiper-slide"><img src="Assets/images/Products-images/posmatics.png" class="img-fluid mx-lg-4" alt="posmatics" /></div>
-          <div class="swiper-slide"><img src="Assets/images/Products-images/predicto.png" class="img-fluid mx-lg-4" alt="predicto" /></div>
-          <div class="swiper-slide"><img src="Assets/images/Products-images/retailatics.png" class="img-fluid mx-lg-4" alt="retailatics" /></div>
-          <div class="swiper-slide"><img src="Assets/images/Products-images/retailmatics.png" class="img-fluid mx-lg-4" alt="retailmatics" /></div>
+        <!-- Swiper container -->
+        <div class="swiper product_swiper bg-white p-2 rounded">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img src="Assets/images/Products-images/automan.png" class="img-fluid" alt="automan" />
+            </div>
+            <div class="swiper-slide">
+              <img src="Assets/images/Products-images/buoylight.png" class="img-fluid" alt="buoylight" />
+            </div>
+            <div class="swiper-slide">
+              <img src="Assets/images/Products-images/buoyspot.png" class="img-fluid" alt="buoyspot" />
+            </div>
+            <div class="swiper-slide">
+              <img src="Assets/images/Products-images/callmatics.png" class="img-fluid" alt="callmatics" />
+            </div>
+            <div class="swiper-slide">
+              <img src="Assets/images/Products-images/carmatics.png" class="img-fluid" alt="carmatics" />
+            </div>
+            <div class="swiper-slide">
+              <img src="Assets/images/Products-images/facematics.png" class="img-fluid" alt="facematics" />
+            </div>
+            <div class="swiper-slide">
+              <img src="Assets/images/Products-images/inteliOCR.png" class="img-fluid" alt="inteliOCR" />
+            </div>
+            <div class="swiper-slide">
+              <img src="Assets/images/Products-images/iport.png" class="img-fluid" alt="iport" />
+            </div>
+            <div class="swiper-slide">
+              <img src="Assets/images/Products-images/mallmatics-02.png" class="img-fluid" alt="mallmatics-02" />
+            </div>
+            <div class="swiper-slide">
+              <img src="Assets/images/Products-images/planetscan.png" class="img-fluid" alt="planetscan" />
+            </div>
+            <div class="swiper-slide">
+              <img src="Assets/images/Products-images/mallmatics.png" class="img-fluid" alt="mallmatics" />
+            </div>
+            <div class="swiper-slide">
+              <img src="Assets/images/Products-images/medbot.png" class="img-fluid" alt="medbot" />
+            </div>
+            <div class="swiper-slide">
+              <img src="Assets/images/Products-images/meddroid.png" class="img-fluid" alt="meddroid" />
+            </div>
+            <div class="swiper-slide">
+              <img src="Assets/images/Products-images/mediatalks.png" class="img-fluid" alt="mediatalks" />
+            </div>
+            <div class="swiper-slide">
+              <img src="Assets/images/Products-images/posmatics.png" class="img-fluid" alt="posmatics" />
+            </div>
+            <div class="swiper-slide">
+              <img src="Assets/images/Products-images/predicto.png" class="img-fluid" alt="predicto" />
+            </div>
+            <div class="swiper-slide">
+              <img src="Assets/images/Products-images/retailatics.png" class="img-fluid" alt="retailatics" />
+            </div>
+            <div class="swiper-slide">
+              <img src="Assets/images/Products-images/retailmatics.png" class="img-fluid" alt="retailmatics" />
+            </div>
+          </div>
+
+          <!-- Optional pagination dots -->
+          <div class="swiper-pagination"></div>
         </div>
-      </div>
 
-      <div class="col-12">
-        <h4 class="float-end mt-3 text-white">Ultimate AI Powered Products</h4>
+        <h4 class="text-white mt-3 text-end">
+          Ultimate AI Powered Products
+        </h4>
       </div>
     </div>
-  </div>
-</section>
+  </section>
+
 
   <!-- ======================== OUR PRODUCT END======================== -->
 
