--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- ======================== EXTERNEL CSS FILE ======================== -->
   <link rel="stylesheet" href="CSS/style.css"> 
   <!-- ======================== EXTERNEL CSS FILE ======================== -->
-   <meta name="twitter:image" content="https://fasihnasiraisystemsoft.netlify.app/Assets/images/Logo/Ai-SS-Logo.png"> 
+   <meta name="twitter:image" content="https://fasihnasiraisystemsoft.netlify.app/Assets/images/Logo/AISS-logo.png"> 
 
   <!-- ======================== EXTERNEL CSS FILE ======================== -->
 
@@ -984,7 +984,7 @@ Connect with us to lay out your miles stones Map</h5>
     <div class="container-fluid footer-content px-4 py-3">
       <div class="row">
         <div class="col-lg-3  col-12 mb-4">
-          <img src="Assets/images/Logo/Ai-SS-Logo.png" alt="Cybron Logo" class="mb-3 col-lg-4 col-3 m-0 p-0">
+          <img src="Assets/images/Logo/AISS-logo.png" alt="Cybron Logo" class="mb-3 col-lg-4 col-3 m-0 p-0">
 
           <p class="locte text-white1 fs-6 ">AI-GRC-Software Development Solution . We Develop Secure & Intelligent
             Solutions</p>
@@ -1042,7 +1042,7 @@ Connect with us to lay out your miles stones Map</h5>
 
     </div>
     
-<div class="container mb-0 mx-auto d-flex flex-lg-row flex-column justify-content-between align-items-center  text-white1  bg rounded-3 border-0   p-3  text-center bottom-footer">
+<div class="container mb-0 mx-auto text-white d-flex flex-lg-row flex-column justify-content-center align-items-center  bg rounded-3 border-0   p-3  text-center bottom-footer">
  
     <nav>
      <ul class="nav nav_of_footer flex-row  gap-lg-3 text-white justify-content-lg-start justify-content-center ">
@@ -1061,13 +1061,13 @@ Connect with us to lay out your miles stones Map</h5>
 </ul>
 
     </nav>
-    <hr class="d-flex w-100 d-lg-none">
- <div class="d-flex flex-row align-items-center ">
-   <h6 class="d-flex flex-row align-items-center copyright_footer mt-2">© 2024
+    
+</div>
+ <div class="col-12 mx-auto d-flex flex-row justify-content-center align-items-center text-center text-white fw-light">
+   <h6 class="d-flex flex-row align-items-center text-center copyright_footer mt-2">© 2024
       AiSystemSoft
       All Rights Reserved</h6>
  </div>
-</div>
   </footer>
     <!-- ! NOTE THIS CONTENT IS REMAIN SAME IN EVERY PAGE -->
   <!-- ======================== FOOTER END ======================== -->
